--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,96 +1,96 @@
-# name: Android CI
+name: Android CI
 
-# on:
-#   push:
-#   pull_request:
-#   workflow_dispatch:
+on:
+  push:
+  pull_request:
+  workflow_dispatch:
 
-# jobs:
-#   BuildRelease:
-#     runs-on: ubuntu-22.04
-#     strategy:
-#       matrix:
-#         arch: [ "all", "arm", "arm64", "x86", "x86_64" ]
-#       fail-fast: false
+jobs:
+  BuildRelease:
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        arch: [ "all", "arm", "arm64", "x86", "x86_64" ]
+      fail-fast: false
 
-#     env:
-#       CURSEFORGE_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
+    env:
+      CURSEFORGE_API_KEY: ${{ secrets.CURSEFORGE_API_KEY }}
 
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-#       - name: Set build type
-#         id: set-env
-#         run: |
-#           COMMIT_MSG="${{ github.event.head_commit.message }}"
-#           BUILD_TYPE="DEBUG"
+      - name: Set build type
+        id: set-env
+        run: |
+          COMMIT_MSG="${{ github.event.head_commit.message }}"
+          BUILD_TYPE="DEBUG"
 
-#           if [[ "$COMMIT_MSG" == *"pre-release"* ]]; then
-#             BUILD_TYPE="PRE_RELEASE"
-#           elif [[ "$COMMIT_MSG" == *"release"* ]]; then
-#             BUILD_TYPE="RELEASE"
-#           fi
+          if [[ "$COMMIT_MSG" == *"pre-release"* ]]; then
+            BUILD_TYPE="PRE_RELEASE"
+          elif [[ "$COMMIT_MSG" == *"release"* ]]; then
+            BUILD_TYPE="RELEASE"
+          fi
 
-#           echo "ZL_BUILD_TYPE=${BUILD_TYPE}" >> $GITHUB_ENV
+          echo "ZL_BUILD_TYPE=${BUILD_TYPE}" >> $GITHUB_ENV
 
-#       - name: Set up JDK 17
-#         uses: actions/setup-java@v4
-#         with:
-#           distribution: 'temurin'
-#           java-version: '17'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-#       - name: Build JRE JAR files
-#         run: |
-#           chmod +x gradlew
-#           mkdir out
-#           ./gradlew jre_lwjgl3glfw:build --no-daemon
+      - name: Build JRE JAR files
+        run: |
+          chmod +x gradlew
+          mkdir out
+          ./gradlew jre_lwjgl3glfw:build --no-daemon
 
-#       - name: Build Release ${{ matrix.arch }}
-#         env:
-#           ARATA_KEYSTORE_PASSWORD: ${{ secrets.ARATA_KEYSTORE_PASSWORD }}
-#         run: |
-#           chmod +x gradlew
-#           ./gradlew YukariLauncher:assemblerelease -Darch=${{ matrix.arch }}
+      - name: Build Release ${{ matrix.arch }}
+        env:
+          ARATA_KEYSTORE_PASSWORD: ${{ secrets.ARATA_KEYSTORE_PASSWORD }}
+        run: |
+          chmod +x gradlew
+          ./gradlew YukariLauncher:assemblerelease -Darch=${{ matrix.arch }}
 
-#       - name: Upload Release ${{matrix.arch}}
-#         continue-on-error: true
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: YukariLauncher(Release) ${{ matrix.arch }}
-#           path: YukariLauncher/build/outputs/apk/release/*
+      - name: Upload Release ${{matrix.arch}}
+        continue-on-error: true
+        uses: actions/upload-artifact@v4
+        with:
+          name: YukariLauncher(Release) ${{ matrix.arch }}
+          path: YukariLauncher/build/outputs/apk/release/*
 
-#   BuildDebug:
-#     if: startsWith(github.ref, 'refs/pull/') || github.ref_name != 'main'
-#     runs-on: ubuntu-22.04
-#     strategy:
-#       matrix:
-#         arch: [ "all", "arm", "arm64", "x86", "x86_64" ]
-#       fail-fast: false
+  BuildDebug:
+    if: startsWith(github.ref, 'refs/pull/') || github.ref_name != 'main'
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        arch: [ "all", "arm", "arm64", "x86", "x86_64" ]
+      fail-fast: false
 
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-#       - name: Set up JDK 17
-#         uses: actions/setup-java@v4
-#         with:
-#           distribution: 'temurin'
-#           java-version: '17'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-#       - name: Build JRE JAR files
-#         run: |
-#           chmod +x gradlew
-#           mkdir out
-#           ./gradlew jre_lwjgl3glfw:build --no-daemon
+      - name: Build JRE JAR files
+        run: |
+          chmod +x gradlew
+          mkdir out
+          ./gradlew jre_lwjgl3glfw:build --no-daemon
 
-#       - name: Build Debug ${{matrix.arch}}
-#         run: |
-#           chmod +x gradlew
-#           ./gradlew YukariLauncher:assembleDebug -Darch=${{ matrix.arch }}
+      - name: Build Debug ${{matrix.arch}}
+        run: |
+          chmod +x gradlew
+          ./gradlew YukariLauncher:assembleDebug -Darch=${{ matrix.arch }}
 
-#       - name: Upload Debug ${{matrix.arch}}
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: YukariLauncher(Debug) ${{ matrix.arch }}
-#           path: YukariLauncher/build/outputs/apk/debug/*
+      - name: Upload Debug ${{matrix.arch}}
+        uses: actions/upload-artifact@v4
+        with:
+          name: YukariLauncher(Debug) ${{ matrix.arch }}
+          path: YukariLauncher/build/outputs/apk/debug/*
